<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/abackground"
        android:padding="5dp" android:orientation="vertical">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_query"
            android:id="@+id/textView"
            android:padding="10dp"

            android:textColor="@color/holo_blue_dark" android:textSize="@dimen/text_size"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:hint="Enter search query here"
            android:id="@+id/queryET"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_field"
            android:id="@+id/textView2"
            android:layout_marginTop="33dp"
            android:textColor="@color/holo_blue_dark" android:textSize="@dimen/text_size"
            android:padding="10dp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldSpinner"
            android:hint="@string/search_field_hint"
            android:entries="@array/field_arrays"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:spinnerMode="dropdown" android:prompt="@string/search_field_hint"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_btn_url"
            android:layout_marginTop="20dp"
            android:id="@+id/buttonUrl" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
            android:textColor="@color/black" style="@style/myButton" android:padding="5dp"/>
</LinearLayout>